# collect-logs

./: ansible.cfg  internal-requirements-new.txt  setup.cfg  test.yml  test_role_template.yml
collect-logs_v/: pip-selfcheck.json
defaults/: .main.yml.swp
infrared_plugin/: .plugin.spec.swp  main.yml  plugin.spec
