[metadata]
name = collect-logs
summary = collect logs for OOOq deployment
description-file =
    README.md
author = Shashank Katlaparthi
author-email = skatlapa@redhat.com
home-page = http://docs.openstack.org/developer/tripleo-quickstart/ #change_me
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities	

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    config = config/*
    playbooks = playbooks/*
    usr/local/share/ansible/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
